--- a/views/search.ejs
+++ b/views/search.ejs
@@ -16,8 +16,12 @@
                                     <button type="submit" class="nav-link px-2 text-white">Home</button>
                                 </form>
                             </li>
-                            <li><a href="#" class="nav-link px-2 text-white">Documentation</a></li>
-                            <li><a href="#" class="nav-link px-2 text-white">Github</a></li>
+                            <li>
+                                <form method="GET" action="/docs" style="display: inline;">
+                                    <button type="submit" class="nav-link px-2 text-white">Documentation</button>
+                                </form>
+                            </li>
+                            <li><a href="https://github.com/rominavc99/booknotes" class="nav-link px-2 text-white">Github</a></li>
                         </ul>
         
                         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" method="GET" action="/search">
