--- a/views/create.ejs
+++ b/views/create.ejs
@@ -2,10 +2,18 @@
 
     <div class="container ">
         <header class="d-flex justify-content-center py-3">
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Documentation</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Github Rep</a></li>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li>
+                    <form method="GET" action="/" style="display: inline;">
+                        <button type="submit" class="nav-link px-2 text-white">Home</button>
+                    </form>
+                </li>
+                <li>
+                    <form method="GET" action="/docs" style="display: inline;">
+                        <button type="submit" class="nav-link px-2 text-white">Documentation</button>
+                    </form>
+                </li>
+                <li><a href="https://github.com/rominavc99/booknotes" class="nav-link px-2 text-white">Github</a></li>
             </ul>
         </header>
     </div>
