--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-dark sticky-bottom">
+<div class="container-fluid bg-dark sticky-bottom fixed-bottom">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/"class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1">
