cloud database confg

--- a/views/indexAdmin.ejs
+++ b/views/indexAdmin.ejs
@@ -22,6 +22,7 @@
                         </form>
                     </li>
                     <li><a href="https://github.com/rominavc99/booknotes" class="nav-link px-2 text-white">Github</a></li>
+
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -46,8 +47,11 @@
             <form method="GET" action="/" style="display: inline;">
                 <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Take me to public index</button>
             </form>
-            
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Documentation</button>
+
+            <form method="GET" action="/create" style="display: inline;">
+                <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Add book</button>
+            </form>
+        
         </div>
     </div>
 </div>
