--- a/views/indexAdmin.ejs
+++ b/views/indexAdmin.ejs
@@ -103,6 +103,9 @@
                                                                                         <span
                                                                                             class="badge rounded-pill text-bg-dark">Fantasy</span>
                                                                                         <% } %>
+                                                                                            <% if (book.romance) { %>
+                                                                                                <span class="badge rounded-pill text-bg-dark">Romance</span>
+                                                                                                <% } %>
                         </div>
 
                     </div>
