--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -93,6 +93,10 @@
                             <input class="form-check-input" type="checkbox" id="fantasy" name="fantasy"  value="true" <% if (book.fantasy) { %>checked<% } %>>
                             <label class="form-check-label" for="fantasy">Fantasy</label>
                         </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="romance" name="romance" value="true" <% if (book.romance) { %>checked<% } %>>
+                            <label class="form-check-label" for="romance">Romance</label>
+                        </div>
                     </div>
                     </div>
                 </fieldset>
