style adjusments and docs update

--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -42,7 +42,7 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Welcome to the documentation page of this project. First thing you need to know about this is that this was developed as part of the 2024 Web Development Bootcamp course from App Brewery in Udemy.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Contact me</button>
+                <a href="mailto:procrom1999@gmail.com" class="btn btn-primary btn-lg px-4 gap-3">Contact me</a>
                 <a href="https://github.com/rominavc99/booknotes" class="btn btn-outline-secondary btn-lg px-4">GitHub</a>
             </div>
         </div>
@@ -72,6 +72,7 @@
                     <li>pg</li>
                     <li>express-session</li>
                     <li>bycrpt</li>
+                    <li>dotenv</li>
                 </ul>
 
                 <p>In addition to this, a PosgreSQL database was created to hold the tables needed to store the projects data.</p>
@@ -88,6 +89,7 @@
                     <li>Project setting</li>
                     <li>Frontend desing</li>
                     <li>Backend programming</li>
+                    <li>Deployment</li>
                     <li>Documentation</li>
                 </ol>
 
@@ -135,6 +137,15 @@
                 </dl>
 
                 <p>This is pretty much the general view about the back end programming part. I struggled a lot, I used ChatGPT for troubleshooting and StackOverflow for ideas. </p>
+
+                <blockquote class="blockquote">
+                    <p>Deployment</p>
+                </blockquote>
+                <p> I wanted to host my web application online so I would be able to share it with my peers in the Bootcamp, as well to be able to show it as part of my personal portfolio. So I decided to host it on render.io. </p>
+                <p> This was quiet a challenge for me since I do not know much about deployment, more specific I wasn't sure about what would I need to do to deploy it with a functional database, since I made the entire project with a local database </p>
+                <p> After looking into it, I found out that I needed to host my DB in a cloud service, I learned about ElephantSQL, I created an account and created the tables that I had on my local database. </p>
+                <p> Once I was done setting my database in ElephantSQL, I returned to my project to make the necessary adjustments so it would work with the cloud database that I created, instead of the local one.  </p>
+                <p> This was the step that took me the most at the end, it was really simple but I was stuck at it for at least one hour, what I learned from this is that it is way better to look into the documentation and try to figure out the issue by yourself than asking ChatGPT. I would have finished it way sooner if I didn't to what ChatGPT was saying. </p>
 
                 <blockquote class="blockquote">
                     <p>Documentation</p>
