--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">On this quick practice project I created a reading list that saves some of the books I have read, with a personal review and rating, I am implementing Express/NodeJS for the serverside, PostgreSQL for the database, and simple HTML, CSS, and JS with Bootstrap for the Frontend desing, adding EJS as templating system.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Contact me</button>
+            <a href="mailto:procrom1999@gmail.com" class="btn btn-primary btn-lg px-4 gap-3">Contact me</a>
             <form method="GET" action="/docs" style="display: inline;">
                 <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Documentation</button>
             </form>
