--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,15 +61,23 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password">
             </div>
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-primary">Login</button>
 
-            <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+
+            
         </form>
 
+       
+    </div>
+    <div class="container-fluid d-flex justify-content-center">
         <% if (error) { %>
-            <div class="alert alert-danger mt-3" role="alert">
+            <div class="alert alert-danger mt-3 col-2" role="alert" >
                 <%= error %>
             </div>
             <% } %>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
